# gcoin-community

./: .gitignore  .travis.yml  CHANGELOG.md  COPYING  INSTALL  Makefile.am  README.md  autogen.sh  configure.ac  gcoin-community.spec  libbitcoinconsensus.pc  libgcoinconsensus.pc.in
build-aux/m4/: bitcoin_find_bdb53.m4
contrib/: README.md  bitcoind.bash-completion  qt_translations.py
contrib/debian/: README.md  bitcoind.bash-completion  bitcoind.install  bitcoind.lintian-overrides  bitcoind.manpages  changelog  control  rules
contrib/debian/examples/: bitcoin.conf
contrib/debian/manpages/: bitcoin-cli.1  bitcoin-qt.1  bitcoin.conf.5  bitcoind.1
contrib/devtools/: symbol-check.py  update-translations.py
contrib/init/: README.md  bitcoind.conf  bitcoind.init  bitcoind.openrc  bitcoind.openrcconf  bitcoind.service  org.bitcoin.bitcoind.plist
contrib/linearize/: README.md  example-linearize.cfg  linearize-data.py  linearize-hashes.py
contrib/qos/: README.md
contrib/rpm/: bitcoin.fc  bitcoin.spec
contrib/rpm-openssl/: gcoin-compat-openssl.spec
contrib/seeds/: generate-seeds.py
contrib/spendfrom/: spendfrom.py
doc/: README.md  REST-interface.md  build-osx.md  build-unix.md  init.md  release-notes.md  tor.md  unit-tests.md
doc/release-notes/: release-notes-0.10.0.md  release-notes-0.10.1.md  release-notes-0.10.2.md  release-notes-0.3.21.md  release-notes-0.3.24.md  release-notes-0.4.1.md  release-notes-0.4.3.md  release-notes-0.4.4.md  release-notes-0.4.6.md  release-notes-0.5.0.md  release-notes-0.5.2.md  release-notes-0.5.3.md  release-notes-0.5.4.md  release-notes-0.5.5.md  release-notes-0.6.0.md  release-notes-0.7.0.md  release-notes-0.7.1.md  release-notes-0.7.2.md  release-notes-0.8.0.md  release-notes-0.8.1.md  release-notes-0.8.2.md  release-notes-0.8.4.md  release-notes-0.8.5.md  release-notes-0.8.6.md  release-notes-0.9.0.md  release-notes-0.9.1.md  release-notes-0.9.2.1.md  release-notes-0.9.2.md  release-notes-0.9.3.md  release-notes-0.9.4.md  release-notes-0.9.5.md
qa/pull-tester/: pull-tester.py  rpc-tests.sh  run-gcoin-cli  run-gcoind-for-test.sh.in  tests-config.sh.in
qa/rpc-tests/: README.md  conflictedbalance.sh  httpbasics.py  keypool.py  maxblocksinflight.py  p2p-acceptblock.py  proxy_test.py  reindex.py  rpcbind_test.py  util.sh  wallet.py  zapwallettxes.py
qa/rpc-tests/test_framework/: comptool.py  mininode.py  test_framework.py  util.py
share/: setup.nsi.in
share/qt/: extract_strings_qt.py
share/seeds/: generate-seeds.py
src/: Makefile.am  Makefile.gcoin_test.include  Makefile.test.include  addrman.cpp  alert.cpp  allocators.h  amount.cpp  amount.h  base58.cpp  base58.h  bitcoin-cli.cpp  bitcoin-tx.cpp  bitcoind.cpp  bloom.cpp  cache.cpp  cache.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  clientversion.cpp  clientversion.h  coins.cpp  coins.h  compat.h  compressor.h  core.cpp  core.h  core_read.cpp  core_write.cpp  crypter.cpp  db.cpp  db.h  gcoin-cli-res.rc  gcoind-res.rc  gcoind.cpp  hash.cpp  (+60 more)
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  strnlen.cpp
src/consensus/: consensus.h
src/crypto/: common.h
src/cryptopp/: GNUmakefile
src/gcoin_test/: Makefile  cache_activate.cpp  cache_color_license.cpp  handler_license.cpp  handler_normal.cpp  listaddr_tests.cpp  rpc_command.cpp  test_gcoin.cpp  test_util.cpp  test_util.h
src/json/: json_spirit_reader.cpp
src/policy/: fees.cpp  licenseinfo.cpp  licenseinfo.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/script/: gcoinconsensus.cpp  gcoinconsensus.h  interpreter.cpp  interpreter.h  script.cpp  script.h  sign.cpp  sign.h  standard.cpp  standard.h
src/secp256k1/: gen_context
src/support/: pagelocker.cpp
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  README.md  accounting_tests.cpp  alert_tests.cpp  allocator_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bip32_tests.cpp  bitcoin-util-test.py  bloom_tests.cpp  cache_activate.cpp  cache_color_license.cpp  checkblock_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  getarg_tests.cpp  handler_license.cpp  handler_normal.cpp  hash_tests.cpp  key_tests.cpp  main_tests.cpp  mempool_tests.cpp  miner_tests.cpp  mruset_tests.cpp  multisig_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  rpc_command.cpp  rpc_tests.cpp  rpc_wallet_tests.cpp  sanity_tests.cpp  scheduler_tests.cpp  script_P2SH_tests.cpp  script_tests.cpp  (+14 more)
src/univalue/: gen.cpp  univalue.cpp  univalue_read.cpp  univalue_write.cpp
src/wallet/: crypter.cpp  db.cpp  hdkeystore.cpp  hdkeystore.h  rpcdump.cpp  rpcwallet.cpp  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h
src/wallet/test/: wallet_tests.cpp
